--- a/bootstrap-grid-layout/index.html
+++ b/bootstrap-grid-layout/index.html
@@ -245,6 +245,111 @@
       </div>
     </div>
 
+    <h3>Responsive when using desktop, tablet, and mobile</h3>
+    <p>
+      Desktop have 4 columns per row, tablet have 3 columns per row, mobile have
+      2 columns per row.
+    </p>
+    <p>
+      4 columns per row on desktop = 12 divided by 4 is 3 units. We will need a
+      3 unit column (col-lg-3)
+    </p>
+    <p>
+      3 columns per row on tablet = 12 divided by 3 is 4 units. We will need a 4
+      unit column (col-md-4)
+    </p>
+    <p>
+      2 columns on per row on mobile = 12 divided by 2 is 6 units. We will need
+      a 6 unit column (col-sm-6)
+    </p>
+
+    <div class="row">
+      <div
+        class="col-lg-3 col-md-4 col-sm-6"
+        style="background-color: yellow; border: 1px solid"
+      >
+        col-lg-3, col-md-4, col-sm-6
+      </div>
+      <div
+        class="col-lg-3 col-md-4 col-sm-6"
+        style="background-color: yellow; border: 1px solid"
+      >
+        col-lg-3, col-md-4, col-sm-6
+      </div>
+      <div
+        class="col-lg-3 col-md-4 col-sm-6"
+        style="background-color: yellow; border: 1px solid"
+      >
+        col-lg-3, col-md-4, col-sm-6
+      </div>
+      <div
+        class="col-lg-3 col-md-4 col-sm-6"
+        style="background-color: yellow; border: 1px solid"
+      >
+        col-lg-3, col-md-4, col-sm-6
+      </div>
+    </div>
+    <br />
+
+    <p>
+      Desktop have 6 columns per row, tablet have 4 columns per row, mobile have
+      1 columns per row.
+    </p>
+    <p>
+      6 columns per row on desktop = 12 divided by 6 is 2 units. We will need a
+      2 unit column (col-lg-2).
+    </p>
+    <p>
+      4 columns per row on tablet = 12 divided by 4 is 3 units. We will need a 3
+      unit column (col-md-3).
+    </p>
+    <p>
+      1 columns on per row on mobile = 12 divided by 1 is 12 units. We will need
+      a 12 unit column (col-sm-12). You can leave this option out because by
+      default all of the columns should take up 100% width of the width of the
+      screen.
+    </p>
+
+    <div class="row">
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+      <div
+        class="col-lg-2 col-md-3 col-sm-12"
+        style="background-color: gold; border: 1px solid"
+      >
+        col-lg-2, col-md-3, col-sm-12
+      </div>
+    </div>
+    <br />
+
     <br />
     <p>
       Visit Bootstrap's Documentation by clicking on the Layout and then Grid
